# django-project-template

./: .env-dist  .env-example  .gitignore  Readme.md  docker-compose.yml  docker-develop.yml  docker-production.yml  manage.py  pyproject.toml  pytest.ini
apps/users/migrations/: 0001_initial.py  0002_auto_20190205_2355.py
apps/users/tests/: test_model.py
docker/django/: DockerFile-production
project_name/: settings.py  urls.py  wsgi.py
requirements/: base.txt  development.txt
